--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
     <section class="mainSection">
         <div class="outputsContainer">
-            <h2 class="operatingSystemOutput">
-
-            </h2>
-            <h2 class="geolocationOutput">
-    
-            </h2>
+            <div class="operatingSystemOutput">
+                <p>OS:<span class="OSOutput"></span></p>
+            </div>
+            <div class="geolocationLongitude">
+                <p>Longitude:<span class="longitudeOutput"></span></p>
+            </div>
+            <div class="geolocationLatitude">
+                <p>Latitude:<span class="latitudeOutput"></span></p>
+            </div>
         </div>
 
         <button class="button">
